# USD_cppexample

./: README.md
animatedTop/: CMakeLists.txt  main.cpp
authoringProperties/: CMakeLists.txt  main.cpp
authoringVariants/: CMakeLists.txt  HelloWorld.usda  main.cpp
helloWorld/: CMakeLists.txt  main.cpp  main_redux.cpp
referencingLayers/: CMakeLists.txt  HelloWorld.usda  main.cpp
